FIxed Z-index

--- a/src/styles/main/NavBar.css
+++ b/src/styles/main/NavBar.css
@@ -5,7 +5,7 @@
   top: 0vh;
   height: 70px;
   background-color: var(--background-color);
-  z-index: 10;
+  z-index: 1;
 }
 
 a {
